--- a/Client/src/css/Pane.css
+++ b/Client/src/css/Pane.css
@@ -6,11 +6,20 @@
     padding: 1rem;
 
     border-radius: 5%;
-    min-height: 85vh;
+    min-height: 90vh;
 
     background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border-radius: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.btn {
+    justify-self: center;
 }
